# ChangeLog for dev-util/cmake
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/cmake/ChangeLog,v 1.153 2011/02/21 15:31:12 scarabeus Exp $

  21 Feb 2011; Tomáš Chvátal <scarabeus@gentoo.org> cmake-2.8.4.ebuild:
  Exclude bootstraptest because it is pointless for us.

*cmake-2.8.4 (21 Feb 2011)

  21 Feb 2011; Tomáš Chvátal <scarabeus@gentoo.org> +cmake-2.8.4.ebuild,
  +files/cmake-2.8.4-FindBoost.patch,
  +files/cmake-2.8.4-FindPythonInterp.patch,
  +files/cmake-2.8.4-FindPythonLibs.patch:
  Version bump to the latest (some tests still fail, to be fixed).

  17 Jan 2011; Tomáš Chvátal <scarabeus@gentoo.org> cmake-2.8.3-r1.ebuild:
  Fix tests per bug #315223.

  26 Dec 2010; Tomáš Chvátal <scarabeus@gentoo.org> -cmake-2.6.4-r3.ebuild,
  -cmake-2.8.3.ebuild:
  old

  25 Dec 2010; Tomáš Chvátal <scarabeus@gentoo.org> cmake-2.8.3-r1.ebuild,
  +files/cmake-2.8.3-fix_assembler_test.patch:
  Fix assembler test bug #338627. Thanks to Anthony (blueness) for the
  solution.

*cmake-2.8.3-r1 (25 Dec 2010)

  25 Dec 2010; Tomáš Chvátal <scarabeus@gentoo.org> +cmake-2.8.3-r1.ebuild,
  +files/cmake-2.8.3-buffer_overflow.patch,
  +files/cmake-2.8.3-ruby_libname.patch:
  Fix ruby finding per bug #345993 and buffer overflowing per bug #329043.

  20 Dec 2010; Tomáš Chvátal <scarabeus@gentoo.org> cmake-2.8.3.ebuild:
  Fix dependency on libarchive version. Fixes bug #348887.

  16 Dec 2010; Tomáš Chvátal <scarabeus@gentoo.org> cmake-2.8.1-r2.ebuild,
  cmake-2.8.3.ebuild:
  Fix malformed headers

*cmake-2.8.3 (16 Dec 2010)

  16 Dec 2010; Tomáš Chvátal <scarabeus@gentoo.org> +cmake-2.8.3.ebuild,
  +files/cmake-2.8.3-FindLibArchive.patch,
  +files/cmake-2.8.3-FindPythonInterp.patch,
  +files/cmake-2.8.3-FindPythonLibs.patch,
  +files/cmake-2.8.3-more-no_host_paths.patch:
  Version bump. Per bug #344259. Thanks to Arseny Solokha for updated patches.

  11 Sep 2010; Raúl Porcel <armin76@gentoo.org> cmake-2.8.1-r2.ebuild: