@@ -29,6 +29,6 @@ DIST cmake-2.8.3.tar.gz 5436543 RMD160 8bcba88ad884e22bbadf4c594a5f3b0bdbf2e12c 
 DIST cmake-2.8.4.tar.gz 5477628 RMD160 8b92eb11391b07433e7fe02bbb80c3ebcaaf1893 SHA1 6c42699bd63fdfcc7743d4906e3208d051d7f19b SHA256 d97ea9f807f5407030d4f7246accc26addc520c9ee3897c4582eba3da49253cc
 EBUILD cmake-2.8.1-r2.ebuild 4383 RMD160 4bddb8e75bc3bfdace40bffc937d57b5e1fcdcd1 SHA1 43d5a4e45080899eb4dee38018097fa7add682a6 SHA256 acde4f84795ce01035c7cff3a3bbc739ab52eb568c5b252fd6d3dda912d53fc1
 EBUILD cmake-2.8.3-r1.ebuild 4304 RMD160 efc2edbc07f3d764857fd8d86d43b5655c7c49d3 SHA1 fbc007112e65b9d42a58c037ec0e7c1c3602e5ee SHA256 8116923b9ad799774443eac9c9f104192c29cbc06424e30d0a51b2cd8c007bd8
-EBUILD cmake-2.8.4.ebuild 4238 RMD160 98cfdbd926feebb254c3219aa74f5c0ac5777194 SHA1 f3b52fd31bd9aafccefc7d9210ff90d472223445 SHA256 569d605b5b420f94df67ce6a769c09d538483b5b5b66807c1fa654b18069f2d5
-MISC ChangeLog 24019 RMD160 e86f94577eaf534c5108389dfd01b7e6d18579be SHA1 80d15ea66ff055d0350160771c83bbd7164d7654 SHA256 bab5264e50a187daddde957642059e1e82d1710458fbc2d15a18c5fd42d6adf1
+EBUILD cmake-2.8.4.ebuild 4401 RMD160 213dfe9f3c95e861500d4460dd2f31aa6ac5e902 SHA1 3eefcddee7acd894d2fef4750da1d34a6f8e8185 SHA256 29de2d2a2e6cee233d7e765ab194672f55d8887e3dd039c3fe22aee87e0f9f68
+MISC ChangeLog 24116 RMD160 376f50030a9280275446524fb243009191c17bff SHA1 ea6555c870ede7ffed68ce43f94f1bc4705fb306 SHA256 f33ce1e7a0042b1ff14444522c108cf89ac06f1039a4807260560805629c8b2e
 MISC metadata.xml 157 RMD160 09fb7b798f3f68127626e97c69e5215a0513ecbb SHA1 d5ffebb2f4248fc8f65ab21c3af6e4f5dbf8bf6e SHA256 01f6fa4357ce08e8b0f7900a51fa78c7f060fefc7c7da98acaec1e283dd59892
