@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/cmake
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/cmake/ChangeLog,v 1.153 2011/02/21 15:31:12 scarabeus Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/cmake/ChangeLog,v 1.154 2011/02/21 15:55:03 scarabeus Exp $
+
+  21 Feb 2011; Tomáš Chvátal <scarabeus@gentoo.org> cmake-2.8.4.ebuild:
+  Exclude sdcc test.
 
   21 Feb 2011; Tomáš Chvátal <scarabeus@gentoo.org> cmake-2.8.4.ebuild:
   Exclude bootstraptest because it is pointless for us.
